common/common.scss
// Design tokens - primary
@use "design-tokens/colors.primary" as primary-colors;
@use "design-tokens/border-radius.primary";

// Design tokens - secondary
@use "design-tokens/colors.secondary";

// Base
@use "base";

// Components
@use "header";
@use "sidebar";
@use "categories";
@use "topics";
@use "button";
@use "input";

:root {
  --main-outlet-padding-x: var(--space-5);
}

#main-outlet {
  position: relative;
  background-color: var(--secondary);
  margin: 40px 0;

  &::before {
    content: url($rhomb);
    position: absolute;
    bottom: calc(100% - 6px);
    left: 0;
    width: 100%;
  }

  &::after {
    content: url($rhomb);
    position: absolute;
    top: calc(100% - 6px);
    left: 0;
    width: 100%;
    transform: scale(-100%);
  }
}

